--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body{
    background-image: url('lawn.jpg'); 
    background-repeat: no-repeat;
+   background-position: center;
+   background-size: 
 }
