--- a/style.css
+++ b/style.css
@@ -2,5 +2,6 @@ body{
    background-image: url('lawn.jpg'); 
    background-repeat: no-repeat;
    background-position: center;
+   background-size: cover;
    
 }
