--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@ body{
 }
 
 h1{
-   font-size: 50px;
+   font-size: 70px;
+   text-align: center;
 }
 
 h2{
-   font-size: 20px;
+   font-size: 40px;
+   text-align: center;
 }
