--- a/style.css
+++ b/style.css
@@ -8,9 +8,11 @@ body{
 h1{
    font-size: 70px;
    text-align: center;
+   color: F8BB00;
 }
 
 h2{
    font-size: 40px;
    text-align: center;
+   color: F8BB00;
 }
