--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-.backgroundPic{
+body{
    background-image: url('lawn.jpg'); 
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0.5;
-   
+}
+
+.backgroundPic{
+   opacity: 1;
 }
 
 h1{
