--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@ body{
    background-repeat: no-repeat;
    background-postion: center;
    background-height: 500px;
-   opacity: 1;
+   opacity: 0.5;
 }
 .backgroundPic{
    float: left;
    clear: left;
 }
 
-.backgroundPic{
-   opacity: 0.5;
+.nav_section, .container{
+   opacity: 1;
 }
 
 h1{
