--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 img {
   opacity: 0.5;
   filter: alpha(opacity=50); /* For IE8 and earlier */
+  height: 900px;
+  width: 900px;
 }
 
 .backgroundPic{
