--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 img {
-  opacity: 0.5;
+  /*opacity: 0.5;
   filter: alpha(opacity=50); /* For IE8 and earlier */
   height: 900px;
   width: 900px;
