--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body{
+  background-color: #50000E
+/*781426
+C76476
+EF9FAF*/
+}
+
 img {
   /*opacity: 0.5;
   filter: alpha(opacity=50); /* For IE8 and earlier */
