--- a/style.css
+++ b/style.css
@@ -48,6 +48,6 @@ a{
 .container{
    display: flex;
    align-items: center;
-   justify-content: center;
+   justify-content: flex-end;
    height: 50vh;
 }
