--- a/style.css
+++ b/style.css
@@ -8,8 +8,10 @@ C76476
 img {
   /*opacity: 0.5;
   filter: alpha(opacity=50); /* For IE8 and earlier */
-  height: 900px;
-  width: 900px;
+  height: 1000px;
+  width: 1000px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .backgroundPic{
