--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
   background-color: #EF9FAF;
+  margin: auto 0;
 /*781426
 C76476
 */
@@ -8,10 +9,8 @@ C76476
 img {
   /*opacity: 0.5;
   filter: alpha(opacity=50); /* For IE8 and earlier */
-  height: 1500px;
-  width: 1500px;
-  margin-top: 0;
-  margin-bottom: 0;
+  height: 800px;
+  width: 800px;  
 }
 
 .backgroundPic{
