--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a{
 .main_nav{
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .container{
