--- a/style.css
+++ b/style.css
@@ -54,3 +54,9 @@ a{
    justify-content: flex-end;
    height: 50vh;
 }
+
+.container_grid{
+   display: grid;
+   grid-gap: 20px;
+   grid-template-columns:repeat(auto-fill,minmax(350px,1fr));
+}
