--- a/style.css
+++ b/style.css
@@ -57,6 +57,6 @@ a{
 .service_container{
    display: flex;
    align-items: center;
-   justify-content:flex-end;
+   justify-content:flex-start;
 }
 
