--- a/style.css
+++ b/style.css
@@ -71,12 +71,8 @@ p{
 }
 
 .myCard{
+  width: 400px;
   height: 400px;
-  border: 1px solid black;
-  animation: mymove 5s infinite;
-}
-
-@keyframes mymove {
-  50% {border: 15px solid lightblue;}
+  border: 5px double #1604AC;
 }
 
