--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ p{
 .myCard{
   width: 700px;
   height: 500px;
-  border: 5px double #1604AC;
+  border: 30px double #1604AC;
+  text-align: center;
 }
 
