--- a/style.css
+++ b/style.css
@@ -73,7 +73,9 @@ p{
 .myCard{
   width: 700px;
   height: 500px;
-  border: 30px double #1604AC;
-  text-align: center;
+  border: 20px double #1604AC;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
