--- a/style.css
+++ b/style.css
@@ -80,7 +80,10 @@ p{
 }
 
 .servicePic{
-  height: 50px;
-  width: 50px;
+  height: 20px;
+  width: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
