--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ a{
    justify-content: flex-end;
 }
 
+@media only screen (max-width:700px){
+    font-size: 0.5em;
+    padding: 0;
+}
+
 .service_container{
    text-align: center;
 }
