--- a/servicestyle.css
+++ b/servicestyle.css
@@ -31,3 +31,12 @@ p{
  font-size: 25px;
  text-align: center;
 }
+
+img{
+  border: 1px solid #0D083A;
+  animation: mymove 5s infinite;
+}
+
+@keyframes mymove {
+  50% {border: 15px solid #0D083A;}
+}
