--- a/style.css
+++ b/style.css
@@ -78,10 +78,14 @@ p{
 .myCard{
   width: 700px;
   height: 400px;
-  border: 20px double #1604AC;
+  border: 1px double #0D083A;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  animation: mymove 5s infinite;
+}
+@keyframes mymove {
+  50% {border: 5px solid #1604AC;}
 }
 
 .servicePic{
