--- a/style.css
+++ b/style.css
@@ -82,10 +82,10 @@ p{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  animation: mymove 5s infinite;
+  animation: mymove 3s infinite;
 }
 @keyframes mymove {
-  50% {border: 5px solid #1604AC;}
+  50% {border: 5px double #1604AC;}
 }
 
 .servicePic{
