--- a/style.css
+++ b/style.css
@@ -78,14 +78,10 @@ p{
 .myCard{
   width: 700px;
   height: 400px;
-  border: 1px double #0D083A;
+  border: 20px double #1604AC;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  animation: mymove 3s infinite;
-}
-@keyframes mymove {
-  50% {border: 5px double #1604AC;}
 }
 
 .servicePic{
