--- a/servicestyle.css
+++ b/servicestyle.css
@@ -33,10 +33,6 @@ p{
 }
 
 img{
-  border: 1px solid #0D083A;
-  animation: mymove 5s infinite;
+  border: 5px solid #1604AC;
 }
 
-@keyframes mymove {
-  50% {border: 3px solid #1604AC;}
-}
